syntax = "proto3";
package entity;

option go_package = "./entity";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "common.proto";

// The entity service definition with http transcoding
service EntityService {
  rpc CreateEntity(CreateEntityReq) returns (CreateEntityRes) {
    // Define HTTP mapping.
    option (google.api.http) = {
      post: "/entities"
      body: "entity"
    };
  }
  rpc ReadEntity(ReadEntityReq) returns (ReadEntityRes) {
    option (google.api.http) = { 
      get: "/entities/{id}" 
    };
  }
  rpc UpdateEntity(UpdateEntityReq) returns (UpdateEntityRes) {
    option (google.api.http) = {
      put: "/entities/{id}"
      body: "entity"
    };
  }
  rpc DeleteEntity(DeleteEntityReq) returns (DeleteEntityRes) {
    option (google.api.http) = { 
      delete: "/entities/{id}" 
    };
  }
  rpc ListEntities(google.protobuf.Empty) returns (ListEntitiesRes) {
    option (google.api.http) = {
      get: "/entities"
    };
  }
}


